--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>MarketPlaceClient</title>
   <base href="/">
 
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
